# vanmoi

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
docs/: agent-protocol.md
src/: config.rs  error.rs  logs.rs  main.rs
src/api/: admin.rs  auth.rs  client.rs  mod.rs  public.rs
src/db/: mod.rs  models.rs  repository.rs  schema.rs
src/middleware/: auth.rs  mod.rs
src/notifier/: mod.rs
src/ws/: handler.rs  mod.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/api/: index.ts
web/src/components/: ServerCard.vue
web/src/router/: index.ts
web/src/stores/: auth.ts  servers.ts
web/src/styles/: main.css
web/src/views/: AdminView.vue  DashboardView.vue  LoginView.vue  ServerDetailView.vue
