[package]
name = "vanmoi"
version = "0.1.0"
edition = "2024"
authors = ["Vansour"]
description = "Server monitoring master control panel"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (for notifications)
reqwest = { version = "0.12", features = ["json"] }

# WebSocket
futures = "0.3"
tokio-tungstenite = "0.26"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
